Version 6.1.0
- Implemented ^@ and FIELD[] for Spin2
- Implemented conditional assembly instructions if, elseif, else, and endif
- Merged Ada's improved strlen() function
- Merged some register allocation improvements from Ada

Version 6.0.5
- Fixed an optimizer bug with inlined functions
- Fixed a spurious "use before set" warning in sizeof()
- Improved the error message for try blocks in bytecode output

Version 6.0.4
- Fixed incorrect file name after #include in some rare cases (when the included file's name exactly matches the end of the original file)

Version 6.0.3
- Fix a bug in P1 listing file output

Version 6.0.2
- Fixed an internal error where BASIC array references sometimes look like calls
- Fixed some spurious warnings about 0-0 style operands in inline assembly
- Fixed number of blocks calculation in FatFS stat() function.
- Fixed some "unknown type xx passed to IsArrayType" errors

Version 6.0.1
- Added missing file for LittleFS file system.

Version 6.0.0
- Added interpreter and code size printing if --sizes is given
- Added atof() and strtof() functions
- Added %p format flag to printf
- Allow newlines inside BASIC initializations
- Automatically reset baud rate on _clkset()
- Disabled SIMPLE_IO printf optimization because it was interacting poorly with symbol resolution
- Fixed _ assignment in nucode output
- Fixed calculation of FVAR/FVARS when labels are unknown
- Fixed a problem with unnamed parameters not being counted in code generation
- Fixed _getus() and _getms() in -2nu
- Fixed _waitms and _waitus timing
- Fixed type of `_clkmode` on P2 (it was byte instead of long)
- Fixed compilation error on some signed multiplies
- Fixed calling varargs functions from Spin in bytecode
- Fixed BASIC LINE INPUT when no explicit file handle is given
- Fixed umount of SD card to clear pins in use
- Implemented _muldiv64 for bytecode
- Made Spin2 loop behaviour match that of other languages (like PNut v38)
- Optimized nucode output considerably