@@ -3,6 +3,7 @@ Version 6.1.0
 - Implemented conditional assembly instructions if, elseif, else, and endif
 - Merged Ada's improved strlen() function
 - Merged some register allocation improvements from Ada
+- Provide syntax for C `struct using` to override constants in Spin2 objects
 
 Version 6.0.5
 - Fixed an optimizer bug with inlined functions
